--- a/css/main.css
+++ b/css/main.css
@@ -1846,7 +1846,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #b5fac4;
+  background: #ffc3ff;
 }
 .feed-link,
 .chat {
